Fixed close button's pixel jump on hover

--- a/src/components/common/styles/Modal.css
+++ b/src/components/common/styles/Modal.css
@@ -27,21 +27,24 @@
 
 .close-modal-btn {
     margin: 0;
+    margin-right: 1em;
+    font-size: 2em;
+    float: right;
     cursor: pointer;
     
 }
 
 .close-container{
-    float: right;
-    margin-right: 0.5em;
-    padding-bottom: 1em;
-    font-size: 30px;
+    width: 100%;
 }
 
 .close-modal-btn:hover{
     padding: 0;
     transform: scale(1.2);
+    transform-origin: center;
     transition: transform .2s;
+    -webkit-backface-visibility: hidden;
+    -webkit-transform: translateZ(0) scale(1.2);
 }
 
 .btn-cancel, .btn-continue {
